--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "file-system": "^1.2.2",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
     "pug": "^3.0.2"
   }
 }
