--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "nodemon app.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -18,6 +19,7 @@
     "morgan": "~1.9.1",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "pug": "^3.0.2"
   }
 }
