--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.18.2",
+    "express-validator": "^6.15.0",
     "file-system": "^1.2.2",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
