--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "serve": "nodemon app.js"
+    "serve": "nodemon app.js",
+    "test": "set NODE_ENV=test && mocha --timeout 10000"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -18,9 +19,15 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "sinon": "^15.0.3"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
+    "mocha": "^2.5.3",
+    "nodemon": "^2.0.22"
   }
 }
